--- a/config/swoop.conf
+++ b/config/swoop.conf
@@ -1,15 +1,13 @@
-CONFIG_ZMK_KEYBOARD_NAME="Kuolemax's Swoop"
+CONFIG_ZMK_KEYBOARD_NAME="Swoop"
 
-# increase bluetooth signal power
+# 电池电量报告间隔时间单位是秒
+CONFIG_ZMK_BATTERY_REPORT_INTERVAL=60
+# 增加键盘消抖
+CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=5
+CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=5
+# 增加键盘的 BLE 无线电的发射功率，用解决延迟和左右通讯不佳的问题
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
-
-# --- DISPLAY SETTINGS ---
-CONFIG_ZMK_DISPLAY=y
-CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
 
 CONFIG_EC11=y
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 
-CONFIG_ZMK_RGB_UNDERGLOW=y
-CONFIG_WS2812_STRIP=y
-CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=y
