--- a/config/boards/shields/swoop/swoop.zmk.yml
+++ b/config/boards/shields/swoop/swoop.zmk.yml
@@ -4,12 +4,10 @@ name: swoop
 type: shield
 url: https://github.com/jimmerricks/swoop
 requires: [pro_micro]
-exposes: [i2c_oled]
+exposes: []
 features:
   - keys
-  - display
   - encoders
-  - underglow
 siblings:
   - swoop_left
   - swoop_right
